--- a/CNN/SeparableConv2d_test.html
+++ b/CNN/SeparableConv2d_test.html
@@ -5,6 +5,6 @@
     <!-- script src="SeparableConv2d.js"></script -->
   </head>
   <body>
-    <script type="module" src="SeparableConv2d_test.js"></script>
+    <script type="module" src="SeparableConv2d_test.mjs"></script>
   </body>
 </html>
