--- a/CNN/SeparableConv2d_test.html
+++ b/CNN/SeparableConv2d_test.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.12.0"></script>
-    <!-- script src="SeparableConv2d.js"></script -->
+    <script type="module" src="SeparableConv2d.js"></script>
   </head>
   <body>
     <!-- script type="module" src="SeparableConv2d_test.mjs"></script -->
