--- a/CNN/SeparableConv2d_test.html
+++ b/CNN/SeparableConv2d_test.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.12.0"></script>
-    <script type="module" src="SeparableConv2d.js"></script>
+    <!-- sscript type="module" src="SeparableConv2d.js"></script -->
   </head>
   <body>
-    <!-- script type="module" src="SeparableConv2d_test.mjs"></script -->
-    <script src="SeparableConv2d_test.js"></script>
+    <script type="module" src="SeparableConv2d_test.mjs"></script>
+    <!-- script src="SeparableConv2d_test.js"></script -->
   </body>
 </html>
