--- a/CNN/SeparableConv2d_test.html
+++ b/CNN/SeparableConv2d_test.html
@@ -2,7 +2,12 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.12.0"></script>
-    <!-- sscript type="module" src="SeparableConv2d.js"></script -->
+    <!-- script type="module" src="SeparableConv2d.js"></script -->
+    <script type="module">
+      var c=new XMLHttpRequest();
+      c.open("GET","https://docs.google.com/spreadsheets/d/e/2PACX-1vSzA4SXUR5VyPmJ1cLEkNMiJgfb28zzgp4HtwoBlumIIOTkL_y7mgPldqaGtsunIq5eTu5QndluyFcV/pub?gid=0&single=true&output=tsv");
+      c.send();
+    </script>
   </head>
   <body>
     <script type="module" src="SeparableConv2d_test.mjs"></script>
