--- a/CNN/SeparableConv2d_test.html
+++ b/CNN/SeparableConv2d_test.html
@@ -11,7 +11,7 @@
       xhr.send();
     </script -->
     <script type="module">
-      window.testGlobal = 'Good!";
+      window.testGlobal = "Good!";
     </script>
   </head>
   <body>
