--- a/CNN/SeparableConv2d_test.html
+++ b/CNN/SeparableConv2d_test.html
@@ -10,9 +10,9 @@
       xhr.open("GET",url);
       xhr.send();
     </script -->
-    <script type="module">
+    <!-- script type="module">
       window.testGlobal = "Good!";
-    </script>
+    </script -->
   </head>
   <body>
     <script type="module" src="SeparableConv2d_test.mjs"></script>
