--- a/CNN/SeparableConv2d_test.html
+++ b/CNN/SeparableConv2d_test.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.12.0"></script>
+    <!-- script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@0.13.0"></script -->
     <!-- script type="module" src="SeparableConv2d.js"></script -->
     <!-- script type="module">
       const url="https://docs.google.com/spreadsheets/d/e/2PACX-1vSzA4SXUR5VyPmJ1cLEkNMiJgfb28zzgp4HtwoBlumIIOTkL_y7mgPldqaGtsunIq5eTu5QndluyFcV/pub?gid=0&single=true&output=tsv";
@@ -10,12 +10,12 @@
       xhr.open("GET",url);
       xhr.send();
     </script -->
-    <!-- script type="module">
-      window.testGlobal = "Good!";
-    </script -->
   </head>
   <body>
-    <script type="module" src="SeparableConv2d_test.mjs"></script>
-    <!-- script src="SeparableConv2d_test.js"></script -->
+    <!-- script type="module" src="SeparableConv2d_test.js"></script -->
+    <script>
+      document.head.appendChild(Object.assign(document.createElement("script"),
+        { src:"SeparableConv2d_test.js", type:"module" }));
+    </script>
   </body>
 </html>
