--- a/CNN/tester/Base64ArrrayBufferToUint8Array.html
+++ b/CNN/tester/Base64ArrrayBufferToUint8Array.html
@@ -5,6 +5,6 @@
     <title>Base64ArrrayBufferToUint8Array Test</title>
   </head>
   <body>
-    <script type="module" src="../Base64ArrrayBufferToUint8Array.js></script>
+    <script type="module" src="../Base64ArrrayBufferToUint8Array_Test.js"></script>
   </body>
 </html>
