--- a/CNN/tester/Base64ArrayBufferToUint8Array.html
+++ b/CNN/tester/Base64ArrayBufferToUint8Array.html
@@ -5,6 +5,7 @@
     <title>Base64ArrayBufferToUint8Array Test</title>
   </head>
   <body>
+    <progress title="TestProgressBar"></progress>
     <script type="module" src="./Base64ArrayBufferToUint8Array_tester.js"></script>
   </body>
 </html>
