--- a/CNN/tester/SeparableConv2d_test.html
+++ b/CNN/tester/SeparableConv2d_test.html
@@ -12,7 +12,7 @@
     </script -->
   </head>
   <body>
-    <!-- script type="module" src="SeparableConv2d_test.js"></script -->
+    <script type="module" src="SeparableConv2d_test.js"></script>
     <script>
       document.head.appendChild(Object.assign(document.createElement("script"),
         { src:"SeparableConv2d_test.js", type:"module" }));
