--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <table id="resultHTMLTable"></table>
-    <script type="module" src="./HeightWidthDepth.js"></script>
+    <!-- script type="module" src="./HeightWidthDepth.js"></script -->
+    <script type="module" src="./jsPerf_CNNHeightWidthResize.js"></script>
   </body>
 </html>
