--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -4,7 +4,7 @@
     <title>TestFilters2D</title>
   </head>
   <body>
-    <table id="resultHTMLTable"></table>
+    <table id="profilesHTMLTable"></table>
     <!-- script type="module" src="./HeightWidthDepth.js"></script -->
     <script type="module" src="./jsPerf_CNNHeightWidthResize.js"></script>
   </body>
