--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -4,6 +4,7 @@
     <title>TestFilters2D</title>
   </head>
   <body>
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0"></script>
     <table id="profilesHTMLTable"></table>
     <!-- script type="module" src="./HeightWidthDepth.js"></script -->
     <script type="module" src="./jsPerf_CNNHeightWidthResize.js"></script>
