--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -8,5 +8,8 @@
     <table id="profilesHTMLTable"></table>
     <!-- script type="module" src="./HeightWidthDepth.js"></script -->
     <script type="module" src="./jsPerf_CNNHeightWidthResize.js"></script>
+    <script type="module">
+      globalThis.testCaseLoader();
+    </script>
   </body>
 </html>
