--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -6,7 +6,7 @@
   <body>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0"></script>
     <table id="profilesHTMLTable"></table>
-    <!-- script type="module" src="./HeightWidthDepth.js"></script -->
+    <progress title="progressBar"></progress>
     <script type="module" src="./jsPerf_CNNHeightWidthResize.js"></script>
     <script type="module">
       globalThis.testCaseLoader();
