--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <title>TestFilters2D</title>
+    <style>
+      #profilesHTMLTable {
+        border-collapse: collapse;
+        width: 100%;
+      }
+    </style>
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.0"></script>
