--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -3,10 +3,12 @@
   <head>
     <title>TestFilters2D</title>
     <style>
-      #profilesHTMLTable {
+      table {
         border-collapse: collapse;
         width: 100%;
       }
+
+      tr:hover { background-color: #f5f5f5; }
     </style>
   </head>
   <body>
