--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -9,6 +9,7 @@
       }
 
       tr:hover { background-color: #f5f5f5; }
+      tr:nth-child(even) { background-color: #f2f2f2; }
     </style>
   </head>
   <body>
