--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -8,6 +8,10 @@
         width: 100%;
       }
 
+      th, td {
+        border-bottom: 1px solid #ddd;
+      }
+
       tr:hover { background-color: #f5f5f5; }
       tr:nth-child(even) { background-color: #f2f2f2; }
     </style>
