--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -12,6 +12,14 @@
         border-bottom: 1px solid #ddd;
       }
 
+      th {
+        padding-top: 12px;
+        padding-bottom: 12px;
+        text-align: left;
+        background-color: #4CAF50;
+        color: white;
+      }
+
       tr:hover { background-color: #f5f5f5; }
       tr:nth-child(even) { background-color: #f2f2f2; }
     </style>
