--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -20,6 +20,10 @@
         color: white;
       }
 
+      td {
+        text-align: right;
+      }
+
       tr:hover { background-color: #f5f5f5; }
       tr:nth-child(even) { background-color: #f2f2f2; }
     </style>
