--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -15,12 +15,20 @@
       th {
         padding-top: 2px;
         padding-bottom: 2px;
-        text-align: left;
+ /*       text-align: left; */
         background-color: #4CAF50;
         color: white;
       }
 
-      td {
+      thead th {
+        text-align: center;
+      }
+
+      tbody th {
+        text-align: left;
+      }
+
+      tbody td {
         text-align: right;
       }
 
