--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -32,8 +32,8 @@
         text-align: right;
       }
 
-      tr:hover { background-color: #f5f5f5; }
-      tr:nth-child(even) { background-color: #f2f2f2; }
+      tr:hover { background-color: #d5f5f5; }
+      tr:nth-child(even) { background-color: #d5f5d5; }
     </style>
   </head>
   <body>
