--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -32,7 +32,7 @@
       }
 
       tr:hover { background-color: #d5f5f5; }
-      tr:nth-child(4n) { background-color: #d5f5d5; }
+      tr:nth-child(4n-1), tr:nth-child(4n) { background-color: #d5f5d5; }
     </style>
   </head>
   <body>
