--- a/CNN/jsPerf/TestFilters2D.html
+++ b/CNN/jsPerf/TestFilters2D.html
@@ -37,7 +37,7 @@
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@2.0.1"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm/dist/tf-backend-wasm.js"></script>
+    <!-- script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm/dist/tf-backend-wasm.js"></script -->
     <table id="profilesHTMLTable"></table>
     <progress title="TestProgressBar"></progress>
     <script type="module" src="./jsPerf_CNNHeightWidthResize.js"></script>
