Update and rename Base64ToUint8Array.html to util_tester.html

--- a/CNN/tester/util_tester.html
+++ b/CNN/tester/util_tester.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Base64ToUint8Array Test</title>
+    <title>util Tester</title>
   </head>
   <body>
     <progress title="TestProgressBar"></progress>
-    <script type="module" src="./Base64ToUint8Array_tester.js"></script>
+    <script type="module" src="./util_tester.js"></script>
   </body>
 </html>
