--- a/CNN/tester/QuerySubmitCanvas_tester.html
+++ b/CNN/tester/QuerySubmitCanvas_tester.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>QuerySubmitCanvas Tester</title>
+    <style>
+      body {
+        background-color:black  
+      }
+    </style>
     <script src="./QuerySubmitCanvas_tester.js"></script>
   </head>
   <body>
