QuerySubmitCanvas_domSide_script

--- a/CNN/tester/QuerySubmitCanvas_tester.html
+++ b/CNN/tester/QuerySubmitCanvas_tester.html
@@ -8,6 +8,7 @@
       }
     </style>
     <script src="./QuerySubmitCanvas_tester.js"></script>
+    <script src="./QuerySubmitCanvas_domSide_script.js"></script>
   </head>
   <body>
     <canvas height="72" width="128"></canvas>
