body  background-color: black

--- a/CNN/tester/util_tester.html
+++ b/CNN/tester/util_tester.html
@@ -2,6 +2,11 @@
 <html>
   <head>
     <title>util Tester</title>
+    <style>
+      body {
+        background-color: black
+      }
+    </style>
   </head>
   <body>
     <progress title="TestProgressBar"></progress>
