--- a/CNN/tester/TestFilters2D.html
+++ b/CNN/tester/TestFilters2D.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>TestFilters2D</title>
-    <link href="PerformanceTable.css.css" rel="stylesheet" />
+    <link href="PerformanceTable.css" rel="stylesheet" />
   </head>
   <body>
     <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@3.19.0/dist/tf.min.js"></script>
