--- a/CNN/tester/util_tester.html
+++ b/CNN/tester/util_tester.html
@@ -2,11 +2,7 @@
 <html>
   <head>
     <title>util Tester</title>
-    <style>
-      body {
-        background-color: black
-      }
-    </style>
+    <link href="./PerformanceTable.css" rel="stylesheet" />
   </head>
   <body>
     <progress title="TestProgressBar"></progress>
