--- a/CNN/tester/util_tester.html
+++ b/CNN/tester/util_tester.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <progress title="TestProgressBar"></progress>
+    <table id="NeuralWorker_Performance_Table"></table>
     <script type="module" src="./util_tester.js"></script>
   </body>
 </html>
