--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -16,7 +16,10 @@
       </tr>
 
       <tr>
-        <table id="VersusSummary_Table"></table>
+        <th>VersusSummary</th>
+        <td>
+          <table id="VersusSummary_Table"></table>
+        </td>
       </tr>
 
       <tr>
