--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -8,7 +8,7 @@
 
     <table>
       <tr>
-        <th>SpreadsheetId</th>
+        <th scope="row">SpreadsheetId</th>
         <td>
           <input id="SpreadsheetId" type="text" minlength="47" maxlength="255" size="50">
           <input id="Download" type="button" value="Download">
@@ -16,30 +16,27 @@
       </tr>
 
       <tr>
-        <th>VersusSummary</th>
+        <th scope="row">VersusSummary</th>
         <td>
           <table id="VersusSummary_Table"></table>
         </td>
       </tr>
 
       <tr>
-        <th>VersusId</th>
-        <td>
-          <textarea id="VersusId" rows="1" cols="50"></textarea>
+        <th scope="row">VersusId</th>
+        <td id="VersusId">
         </td>
       </tr>
 
       <tr>
-        <th>ParentChromosomes</th>
-        <td>
-          <textarea id="ParentChromosomes" rows="10" cols="200" readonly></textarea>
+        <th scope="row">ParentChromosomes</th>
+        <td id="ParentChromosomes">
         </td>
       </tr>
 
       <tr>
-        <th>OffspringChromosomes</th>
-        <td>
-          <textarea id="OffspringChromosomes" rows="10" cols="200" readonly></textarea>
+        <th scope="row">OffspringChromosomes</th>
+        <td id="OffspringChromosomes">
         </td>
       </tr>
     </table>
