--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -30,13 +30,15 @@
 
       <tr>
         <th scope="row">ParentChromosomes</th>
-        <td id="ParentChromosomes">
+        <td>
+          <textarea id="ParentChromosomes" rows="10" cols="200" readonly></textarea>
         </td>
       </tr>
 
       <tr>
         <th scope="row">OffspringChromosomes</th>
-        <td id="OffspringChromosomes">
+        <td>
+          <textarea id="OffspringChromosomes" rows="10" cols="200" readonly></textarea>
         </td>
       </tr>
     </table>
