--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -11,7 +11,7 @@
         <th scope="row">SpreadsheetId</th>
         <td>
           <input id="SpreadsheetId" type="text" minlength="47" maxlength="255" size="50">
-          <input id="Download" type="button" value="Download">
+          <button id="DownloadButton" type="button">Download</button>
         </td>
       </tr>
 
