--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -10,7 +10,7 @@
       <tr>
         <th scope="row">SpreadsheetId</th>
         <td>
-          <input id="SpreadsheetId" type="text" minlength="47" maxlength="255" size="50">
+          <input id="SpreadsheetIdText" type="text" minlength="47" maxlength="255" size="50">
           <button id="DownloadButton" type="button">Download</button>
         </td>
       </tr>
