--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -23,9 +23,9 @@
       </tr>
 
       <tr>
-        <th scope="row">NextVersusId</th>
+        <th scope="row">NextVisitIndex</th>
         <td>
-          <input id="NextVersusIdText" type="text" maxlength="150" size="50" readonly>
+          <input id="NextVisitIndexText" type="text" maxlength="150" size="50" readonly>
           <button id="DownloadVersusButton" type="button">Download Next Versus</button>
         </td>
       </tr>
