--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -18,7 +18,7 @@
       <tr>
         <th scope="row">VersusSummary</th>
         <td>
-          <table id="VersusSummary_Table"></table>
+          <table id="VersusSummaryTable"></table>
         </td>
       </tr>
 
