g_Contorls.DownloadVersusButton.disabled

--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -26,7 +26,7 @@
         <th scope="row">NextVisitIndex</th>
         <td>
           <input id="NextVisitIndexText" type="text" maxlength="20" size="20" readonly>
-          <button id="DownloadVersusButton" type="button" disable>Download Next Versus</button>
+          <button id="DownloadVersusButton" type="button" disabled>Download Next Versus</button>
         </td>
       </tr>
 
