DownloadSummaryButton.disabled until window loaded.

--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -11,7 +11,7 @@
         <th scope="row">SpreadsheetId</th>
         <td>
           <input id="SpreadsheetIdText" type="text" maxlength="150" size="50">
-          <button id="DownloadSummaryButton" type="button">Download Summary</button>
+          <button id="DownloadSummaryButton" type="button" disabled>Download Summary</button>
         </td>
       </tr>
 
