--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -5,6 +5,34 @@
     <link href="./PerformanceTable.css" rel="stylesheet" />
   </head>
   <body>
+
+    input_height = 72,
+    input_width = 128,
+  
+    vocabularyChannelCount = 8, //6, //4,
+    blockCountTotalRequested = 84, //100, //200, //50, //20, //10,
+    output_channelCount_per_alignment = 6,
+  
+    <div>
+      <div>
+        <label for="input_height_text">input_height:</label>
+        <input id="input_height_text" type="text" maxlength="5" size="5" value="72"/>
+
+        <label for="input_width_text">input_width:</label>
+        <input id="input_width_text" type="text" maxlength="5" size="5" value="128"/>
+
+        <label for="vocabularyChannelCount_text">vocabularyChannelCount:</label>
+        <input id="vocabularyChannelCount_text" type="text" maxlength="3" size="3" value="8"/>
+
+        <label for="blockCountTotalRequested_text">blockCountTotalRequested:</label>
+        <input id="blockCountTotalRequested_text" type="text" maxlength="4" size="4" value="84"/>
+
+        <label for="output_channelCount_per_alignment_text">output_channelCount_per_alignment:</label>
+        <input id="output_channelCount_per_alignment_text" type="text" maxlength="4" size="4" value="6"/>
+      </div>
+      <button id="CalcWeightCountButton" type="button" disabled>Calculate Weight Count</button>
+    </div>
+
     <progress title="TestProgressBar"></progress>
     <table id="NeuralWorker_Performance_Table"></table>
     <script type="module" src="./NeuralWorker_tester.js"></script>
