--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -6,35 +6,46 @@
   </head>
   <body>
 
-    <div>
-      <div>
-        <label for="input_height_text">input_height:</label>
-        <input id="input_height_text" type="text" maxlength="5" size="5" value="72"/>
-      </div>
+    <table>
+      <tr>
+        <th scope="row">input_height</th>
+        <td>
+          <input id="input_height_text" type="text" maxlength="5" size="5" value="72"/>
+        </td>
+        <th scope="row">input_width</th>
+        <td>
+          <input id="input_width_text" type="text" maxlength="5" size="5" value="128"/>
+        </td>
+      </tr>
 
-      <div>
-        <label for="input_width_text">input_width:</label>
-        <input id="input_width_text" type="text" maxlength="5" size="5" value="128"/>
-      </div>
+      <tr>
+        <th scope="row">vocabularyChannelCount</th>
+        <td>
+          <input id="vocabularyChannelCount_text" type="text" maxlength="3" size="3" value="8"/>
+        </td>
+      </tr>
 
-      <div>
-        <label for="vocabularyChannelCount_text">vocabularyChannelCount:</label>
-        <input id="vocabularyChannelCount_text" type="text" maxlength="3" size="3" value="8"/>
-      </div>
+      <tr>
+        <th scope="row">blockCountTotalRequested</th>
+        <td>
+          <input id="blockCountTotalRequested_text" type="text" maxlength="4" size="4" value="84"/>
+        </td>
+      </tr>
 
-      <div>
-        <label for="blockCountTotalRequested_text">blockCountTotalRequested:</label>
-        <input id="blockCountTotalRequested_text" type="text" maxlength="4" size="4" value="84"/>
-      </div>
+      <tr>
+        <th scope="row">output_channelCount_per_alignment</th>
+        <td>
+          <input id="output_channelCount_per_alignment_text" type="text" maxlength="4" size="4" value="6"/>
+        </td>
+      </tr>
 
-      <div>
-        <label for="output_channelCount_per_alignment_text">output_channelCount_per_alignment:</label>
-        <input id="output_channelCount_per_alignment_text" type="text" maxlength="4" size="4" value="6"/>
-      </div>
-
-      <button id="CalcWeightCountButton" type="button" disabled>Calculate Weight Count</button>
-      <button id="StartTestButton" type="button" disabled>Start Test</button>
-    </div>
+      <tr>
+        <td>
+          <button id="CalcWeightCountButton" type="button" disabled>Calculate Weight Count</button>
+          <button id="StartTestButton" type="button" disabled>Start Test</button>
+        </td>
+      </tr>
+    </table>
 
     <progress title="TestProgressBar"></progress>
     <table id="NeuralWorker_Performance_Table"></table>
