--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -16,29 +16,24 @@
         <td>
           <input id="input_width_text" type="text" maxlength="5" size="5" value="128"/>
         </td>
-      </tr>
-
-      <tr>
         <th scope="row">vocabularyChannelCount</th>
         <td>
           <input id="vocabularyChannelCount_text" type="text" maxlength="3" size="3" value="8"/>
         </td>
+      </tr>
+
+      <tr>
         <th scope="row">blockCountTotalRequested</th>
         <td>
           <input id="blockCountTotalRequested_text" type="text" maxlength="4" size="4" value="84"/>
         </td>
-      </tr>
-
-      <tr>
         <th scope="row">output_channelCount_per_alignment</th>
         <td>
           <input id="output_channelCount_per_alignment_text" type="text" maxlength="4" size="4" value="6"/>
         </td>
         <td>
-          <button id="CalcWeightCountButton" type="button" disabled>Calculate Weight Count</button>
-        </td>
-        <td>
-          <button id="StartTestButton" type="button" disabled>Start Test</button>
+          <button id="CalcWeightCountButton" type="button" disabled>Weight Count Calculate</button>
+          <button id="StartTestButton" type="button" disabled>Performance Test</button>
         </td>
       </tr>
     </table>
