--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -10,32 +10,32 @@
       <tr>
         <th scope="row">input_height</th>
         <td>
-          <input id="input_height_text" type="text" maxlength="5" size="5" value="72"/>
+          <input id="input_height_Text" type="text" maxlength="5" size="5" value="72"/>
         </td>
         <th scope="row">input_width</th>
         <td>
-          <input id="input_width_text" type="text" maxlength="5" size="5" value="128"/>
+          <input id="input_width_Text" type="text" maxlength="5" size="5" value="128"/>
         </td>
         <th scope="row">vocabularyChannelCount</th>
         <td>
-          <input id="vocabularyChannelCount_text" type="text" maxlength="3" size="3" value="8"/>
+          <input id="vocabularyChannelCount_Text" type="text" maxlength="3" size="3" value="8"/>
         </td>
       </tr>
 
       <tr>
         <th scope="row">blockCountTotalRequested</th>
         <td>
-          <input id="blockCountTotalRequested_text" type="text" maxlength="4" size="4" value="84"/>
+          <input id="blockCountTotalRequested_Text" type="text" maxlength="4" size="4" value="84"/>
         </td>
         <th scope="row">output_channelCount_per_alignment</th>
         <td>
-          <input id="output_channelCount_per_alignment_text" type="text" maxlength="4" size="4" value="6"/>
+          <input id="output_channelCount_per_alignment_Text" type="text" maxlength="4" size="4" value="6"/>
         </td>
         <td>
-          <button id="CalcWeightCountButton" type="button" disabled>Weight Count Calculate</button>
+          <button id="InfoButton" type="button" disabled>Info</button>
         </td>
         <td>
-          <button id="StartTestButton" type="button" disabled>Performance Test</button>
+          <button id="TestButton" type="button" disabled>Test</button>
         </td>
       </tr>
     </table>
