progress max="100" value="100"

--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -40,7 +40,7 @@
       </tr>
     </table>
 
-    <progress title="TestProgressBar"></progress>
+    <progress title="TestProgressBar" max="100" value="100"></progress>
     <table id="NeuralWorker_Performance_Table"></table>
     <script type="module" src="./NeuralWorker_tester.js"></script>
   </body>
