--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -8,34 +8,46 @@
 
     <table>
       <tr>
+        <th scope="row">largerFactor</th>
+        <td>
+          <input id="largerFactor_Text" type="text" maxlength="4" size="4" value="15"/>
+        </td>
+
         <th scope="row">input_height</th>
         <td>
           <input id="input_height_Text" type="text" maxlength="5" size="5" value="72"/>
         </td>
+
         <th scope="row">input_width</th>
         <td>
           <input id="input_width_Text" type="text" maxlength="5" size="5" value="128"/>
         </td>
+      </tr>
+
+      <tr>
         <th scope="row">vocabularyChannelCount</th>
         <td>
           <input id="vocabularyChannelCount_Text" type="text" maxlength="3" size="3" value="8"/>
         </td>
-      </tr>
 
-      <tr>
         <th scope="row">blockCountTotalRequested</th>
         <td>
           <input id="blockCountTotalRequested_Text" type="text" maxlength="4" size="4" value="84"/>
         </td>
+
         <th scope="row">output_channelCount_per_alignment</th>
         <td>
           <input id="output_channelCount_per_alignment_Text" type="text" maxlength="4" size="4" value="6"/>
         </td>
-        <td>
-          <button id="InfoButton" type="button" disabled>Info</button>
-        </td>
+      </tr>
+
+      <tr>
         <td>
           <button id="TestButton" type="button" disabled>Test</button>
+        </td>
+
+        <td>
+          <textarea id="Info_TextArea" rows="1" cols="150" readonly></textarea>
         </td>
       </tr>
     </table>
