id="Info_TextArea" colspan="5"

--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -42,8 +42,8 @@
       </tr>
 
       <tr>
-        <td id="Info_TextArea" colspan="6">
-        <!-- textarea  rows="2" cols="100" readonly></textarea> -->
+        <th scope="row">Info</th>
+        <td id="Info_TextArea" colspan="5">
         </td>
       </tr>
 
