--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -25,12 +25,12 @@
       </tr>
 
       <tr>
-        <th scope="row">vocabularyChannelCount</th>
+        <th scope="row">vocabularyChannelCount (>= 2) </th>
         <td>
           <input id="vocabularyChannelCount_Text" type="text" maxlength="3" size="3" value="8"/>
         </td>
 
-        <th scope="row">blockCountTotalRequested</th>
+        <th scope="row">blockCountTotalRequested (>= 2) </th>
         <td>
           <input id="blockCountTotalRequested_Text" type="text" maxlength="4" size="4" value="84"/>
         </td>
