--- a/CNN/tester/util_tester.html
+++ b/CNN/tester/util_tester.html
@@ -5,7 +5,7 @@
     <link href="./PerformanceTable.css" rel="stylesheet" />
   </head>
   <body>
-    <progress title="TestProgressBar" style="width:100%"></progress>
+    <progress title="TestProgressBar"></progress>
     <script type="module" src="./util_tester.js"></script>
   </body>
 </html>
