--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -53,7 +53,7 @@
 
     <div>
       <button id="TestButton" type="button" disabled>Test</button>
-      <progress title="TestProgressBar" max="100" value="0"></progress>
+      <progress id="TestProgressBar" title="TestProgressBar" max="100" value="0"></progress>
     </div>
 
     <table id="NeuralWorker_Performance_Table"></table>
