--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -10,8 +10,11 @@
       <tr>
         <th scope="row">SpreadsheetId</th>
         <td>
-          <input id="SpreadsheetIdText" type="text" maxlength="150" size="50">
+          <input id="SpreadsheetIdText" type="text" maxlength="150" size="50"/>
           <button id="DownloadSummaryButton" type="button" disabled>Download Summary</button>
+
+          <input id="bLogFetcherEventToConsoleCheckbox" type="checkbox"/>
+          <label for="bLogFetcherEventToConsoleCheckbox">bLogFetcherEventToConsole</label>
         </td>
       </tr>
 
@@ -25,7 +28,7 @@
       <tr>
         <th scope="row">NextVisitIndex</th>
         <td>
-          <input id="NextVisitIndexText" type="text" maxlength="20" size="20" readonly>
+          <input id="NextVisitIndexText" type="text" maxlength="20" size="20" readonly/>
           <button id="DownloadVersusButton" type="button" disabled>Download Next Versus</button>
         </td>
       </tr>
