--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -15,6 +15,15 @@
 
           <input id="bLogFetcherEventToConsoleCheckbox" type="checkbox"/>
           <label for="bLogFetcherEventToConsoleCheckbox">bLogFetcherEventToConsole</label>
+
+          <input id="loadingMillisecondsMaxNumber" type="number" value="30000"/>
+          <label for="loadingMillisecondsMaxNumber">loadingMillisecondsMax</label>
+
+          <input id="loadingMillisecondsIntervalNumber" type="number" value="1000"/>
+          <label for="loadingMillisecondsIntervalNumber">loadingMillisecondsInterval</label>
+
+          <input id="retryTimesMaxNumber" type="number" value="1"/>
+          <label for="retryTimesMaxNumber">retryTimesMax</label>
         </td>
       </tr>
 
