--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -14,7 +14,7 @@
           <button id="DownloadSummaryButton" type="button" disabled>Download Summary</button>
         </td>
         <td colspan="1">
-          <progress id="DownloadVersusSummaryProgressBar"></progress>
+          <progress id="DownloadVersusSummaryProgressBar" value="0"></progress>
         </td>
       </tr>
 
@@ -55,7 +55,7 @@
           <button id="DownloadVersusButton" type="button" disabled>Download Next Versus</button>
         </td>
         <td colspan="1">
-          <progress id="DownloadVersusProgressBar"></progress>
+          <progress id="DownloadVersusProgressBar" value="0"></progress>
         </td>
       </tr>
 
