--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -14,9 +14,10 @@
         </td>
         <td colspan="1">
           <button id="DownloadSummaryButton" type="button" disabled>Download Summary</button>
+          <button id="DownloadSummaryAbortButton" type="button" disabled>Abort</button>
         </td>
         <td colspan="1">
-          <progress id="DownloadVersusSummaryProgressBar" value="0"></progress>
+          <progress id="DownloadSummaryProgressBar" value="0"></progress>
         </td>
       </tr>
 
@@ -57,6 +58,7 @@
         </td>
         <td colspan="1">
           <button id="DownloadVersusButton" type="button" disabled>Download Next Versus</button>
+          <button id="DownloadVersusAbortButton" type="button" disabled>Abort</button>
         </td>
         <td colspan="1">
           <progress id="DownloadVersusProgressBar" value="0"></progress>
