--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -13,7 +13,10 @@
           <input id="SpreadsheetIdText" type="text" maxlength="150" size="50"/>
         </td>
         <td colspan="1">
-          <button id="DownloadSummaryButton" type="button" disabled>Download Summary</button>
+          <button id="DownloadSummaryButton" type="button" disabled>
+            Download Summary
+            <span>Hi</span>
+          </button>
           <button id="DownloadSummaryAbortButton" type="button" disabled>Abort</button>
         </td>
         <td colspan="1">
