--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -15,7 +15,7 @@
         <td colspan="1">
           <button id="DownloadSummaryButton" type="button" disabled>
             Download Summary
-            <span>Hi</span>
+            <span id="DownloadSummaryRetryTimesSpan"></span>
           </button>
           <button id="DownloadSummaryAbortButton" type="button" disabled>Abort</button>
         </td>
@@ -60,7 +60,10 @@
           <input id="NextVisitIndexText" type="text" maxlength="20" size="20" readonly/>
         </td>
         <td colspan="1">
-          <button id="DownloadVersusButton" type="button" disabled>Download Next Versus</button>
+          <button id="DownloadVersusButton" type="button" disabled>
+            Download Next Versus
+            <span id="DownloadVersusRetryTimesSpan"></span>
+          </button>
           <button id="DownloadVersusAbortButton" type="button" disabled>Abort</button>
         </td>
         <td colspan="1">
