--- a/CNN/tester/Versus_tester.html
+++ b/CNN/tester/Versus_tester.html
@@ -13,11 +13,9 @@
           <input id="SpreadsheetIdText" type="text" maxlength="150" size="50"/>
         </td>
         <td colspan="1">
-          <button id="DownloadSummaryButton" type="button" disabled>
-            Download Summary
-            <span id="DownloadSummaryRetryTimesSpan"></span>
-          </button>
+          <button id="DownloadSummaryButton" type="button" disabled>Download Summary</button>
           <button id="DownloadSummaryAbortButton" type="button" disabled>Abort</button>
+          <span id="DownloadSummaryRetryTimesSpan"></span>
         </td>
         <td colspan="1">
           <progress id="DownloadSummaryProgressBar" value="0"></progress>
@@ -60,11 +58,9 @@
           <input id="NextVisitIndexText" type="text" maxlength="20" size="20" readonly/>
         </td>
         <td colspan="1">
-          <button id="DownloadVersusButton" type="button" disabled>
-            Download Next Versus
-            <span id="DownloadVersusRetryTimesSpan"></span>
-          </button>
+          <button id="DownloadVersusButton" type="button" disabled>Download Next Versus</button>
           <button id="DownloadVersusAbortButton" type="button" disabled>Abort</button>
+          <span id="DownloadVersusRetryTimesSpan"></span>
         </td>
         <td colspan="1">
           <progress id="DownloadVersusProgressBar" value="0"></progress>
