--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -13,6 +13,10 @@
           <input id="largerFactor_Text" type="text" maxlength="4" size="4" value="15"/>
         </td>
 
+
+!!! ...unfinished... (2023/05/06) has_implicit_input
+
+
         <th scope="row">input_height</th>
         <td>
           <input id="input_height_Text" type="text" maxlength="5" size="5" value="72"/>
