--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -8,14 +8,13 @@
 
     <table>
       <tr>
+
+<!-- (2023/05/11 Remarked)
         <th scope="row">largerFactor</th>
         <td>
           <input id="largerFactor_Text" type="text" maxlength="4" size="4" value="15"/>
         </td>
-
-
-!!! ...unfinished... (2023/05/06) has_implicit_input
-
+-->
 
         <th scope="row">input_height</th>
         <td>
@@ -27,8 +26,17 @@
           <input id="input_width_Text" type="text" maxlength="5" size="5" value="131"/>
           <!-- = 128 + 3 -->
         </td>
-      </tr>
 
+!!! ...unfinished... (2023/05/06) has_implicit_input
+
+        <th scope="row">has_implicit_input</th>
+        <td>
+          <input id="has_implicit_input_Checkbox" type="checkbox">
+          <label for="has_implicit_input_Checkbox">has_implicit_input</label>
+        </td>
+  
+      </tr>
+      
       <tr>
         <th scope="row">vocabularyChannelCount (>= 2) </th>
         <td>
@@ -41,9 +49,9 @@
           <input id="blockCountTotalRequested_Text" type="text" maxlength="4" size="4" value="39"/>
         </td>
 
-        <th scope="row">output_channelCount_per_alignment</th>
+        <th scope="row">output_channelCount</th>
         <td>
-          <input id="output_channelCount_per_alignment_Text" type="text" maxlength="4" size="4" value="64"/>
+          <input id="output_channelCount_Text" type="text" maxlength="4" size="4" value="64"/>
         </td>
       </tr>
 
