has_implicit_input

--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -27,11 +27,9 @@
           <!-- = 128 + 3 -->
         </td>
 
-!!! ...unfinished... (2023/05/06) has_implicit_input
-
         <th scope="row">has_implicit_input</th>
         <td>
-          <input id="has_implicit_input_Checkbox" type="checkbox">
+          <input id="has_implicit_input_Checkbox" type="checkbox" checked>
           <label for="has_implicit_input_Checkbox">has_implicit_input</label>
         </td>
   
