--- a/CNN/tester/NeuralWorker_tester.html
+++ b/CNN/tester/NeuralWorker_tester.html
@@ -16,15 +16,14 @@
         </td>
 -->
 
-        <th scope="row">input_height</th>
+        <th scope="row">explicit_input_height</th>
         <td>
-          <input id="input_height_Text" type="text" maxlength="5" size="5" value="72"/>
+          <input id="explicit_input_height_Text" type="text" maxlength="5" size="5" value="72"/>
         </td>
 
-        <th scope="row">input_width</th>
+        <th scope="row">explicit_input_width</th>
         <td>
-          <input id="input_width_Text" type="text" maxlength="5" size="5" value="131"/>
-          <!-- = 128 + 3 -->
+          <input id="explicit_input_width_Text" type="text" maxlength="5" size="5" value="128"/>
         </td>
 
         <th scope="row">has_implicit_input</th>
